--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+falcon = "==2.0.0"
+gunicorn = "==20.0.4"
+psycopg2-binary = "==2.8.6"
 
 [dev-packages]
 
